--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "unicode-bidi"
-version = "0.2.6"
+version = "0.3.0"
 authors = ["The Servo Project Developers"]
 license = "MIT / Apache-2.0"
 description = "Implementation of the Unicode Bidirectional Algorithm"
@@ -15,3 +15,10 @@ name = "unicode_bidi"
 
 [dependencies]
 matches = "0.1"
+serde = {version = ">=0.8, <2.0", optional = true}
+serde_test = {version = ">=0.8, <2.0", optional = true}
+serde_derive = {version = ">=0.8, <2.0", optional = true}
+
+[features]
+default = []
+with_serde = ["serde", "serde_test", "serde_derive"]
