--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,12 @@ name = "unicode_bidi"
 [dependencies]
 matches = "0.1"
 serde = {version = ">=0.8, <2.0", optional = true}
-serde_test = {version = ">=0.8, <2.0", optional = true}
 serde_derive = {version = ">=0.8, <2.0", optional = true}
+
+[dev-dependencies]
+serde_test = ">=0.8, <2.0"
 
 [features]
 default = []
 unstable = []  # Use in benches/
-with_serde = ["serde", "serde_test", "serde_derive"]
+with_serde = ["serde", "serde_derive"]
