Instrumentation for perf analysis using Flame
* [Cargo.toml] Add `flame_it` feature to enable instrumentation in
`lib.rs` and on `pub fn`s on major modules.

* Add example crate to get bidi info and visual runs for one piece of
bidi text and output flame chart.

* Move UDHR data files out of `/benches/` and into `/data/` to share
between various types of crates in the repo.

Test:
```
cargo run --example flame_udhr --features flame_it
```
produces `flame-udhr-graph.html`..

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: rust
 sudo: false
+os: linux
+dist: trusty
 
 rust:
   - nightly
@@ -17,12 +19,18 @@ notifications:
   email:
     on_success: never
 
-before_script:
-  - pip install git+https://github.com/euclio/travis-cargo@kcov --user && export PATH=$HOME/.local/bin:$PATH
-
 script:
   - cargo build --verbose
-  - cargo test  --verbose
-  - cargo test  --verbose --features with_serde
   - cargo doc   --verbose --no-deps
-  - travis-cargo bench
+
+  - RUST_BACKTRACE=1 cargo test  --verbose
+  - RUST_BACKTRACE=1 cargo test  --verbose --features with_serde
+
+  - if [ "$TRAVIS_RUST_VERSION" != "nightly" ] ; then exit ; fi
+
+  - RUST_BACKTRACE=1 cargo test --verbose --features bench_it
+  - RUST_BACKTRACE=1 cargo test --verbose --features flame_it
+
+  - cargo run --verbose --features flame_it --example flame_udhr
+
+  - cargo bench --verbose --features bench_it
