--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ exclude = ["*.txt"]
 name = "unicode_bidi"
 
 [dependencies]
+flame = { version = "0.1", optional = true }
+flamer = { version = "0.1", optional = true }
 matches = "0.1"
 serde = {version = ">=0.8, <2.0", optional = true}
 serde_derive = {version = ">=0.8, <2.0", optional = true}
@@ -23,5 +25,7 @@ serde_test = ">=0.8, <2.0"
 
 [features]
 default = []
-unstable = []  # Use in benches/
+unstable = []  # travis-cargo needs it
+bench_it = []
+flame_it = ["flame", "flamer"]
 with_serde = ["serde", "serde_derive"]
