--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,8 @@ notifications:
     on_success: never
 
 env:
-  - RUST_BACKTRACE=1
+  global:
+    - RUST_BACKTRACE=full
 
 script:
   - cargo build --verbose
@@ -29,11 +30,10 @@ script:
   - cargo test  --verbose
   - cargo test  --verbose --features 'with_serde'
 
-  # Stop here if not running on nightly rust
-  - if [ "$TRAVIS_RUST_VERSION" != "nightly" ] ; then exit ; fi
+  - if [ "$TRAVIS_RUST_VERSION" == "nightly" ]; then
+      cargo bench --verbose --features 'bench_it';
+    fi
 
-  - cargo test  --verbose --features 'bench_it'
-  - cargo bench --verbose --features 'bench_it'
-
-  - cargo test  --verbose --features 'flame_it'
-  - cargo run   --verbose --features 'flame_it' --example 'flame_udhr'
+  - if [ "$TRAVIS_RUST_VERSION" == "nightly" ]; then
+      cargo run   --verbose --features 'flame_it' --example 'flame_udhr';
+    fi
