Use serde feature instead of with_serde
Based on recommendation from Rust API guideline (C-SERDE):
https://github.com/brson/rust-api-guidelines#interoperability

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -16,4 +16,4 @@ test_script:
   - cargo doc   --verbose --all --no-deps
 
   - cargo test  --verbose --all
-  - cargo test  --verbose --all --features with_serde
+  - cargo test  --verbose --all --features serde
