--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,7 @@ name = "unicode_bidi"
 flame = { version = "0.1", optional = true }
 flamer = { version = "0.1", optional = true }
 matches = "0.1"
-serde = {version = ">=0.8, <2.0", optional = true}
-serde_derive = {version = ">=0.8, <2.0", optional = true}
+serde = { version = ">=0.8, <2.0", optional = true, features = ["derive"] }
 
 [dev-dependencies]
 serde_test = ">=0.8, <2.0"
@@ -28,4 +27,4 @@ default = []
 unstable = []  # travis-cargo needs it
 bench_it = []
 flame_it = ["flame", "flamer"]
-with_serde = ["serde", "serde_derive"]
+with_serde = ["serde"]  # DEPRECATED, please use `serde` feature, instead.
