[Cargo] Fix exclude rules
* We need to use `*` or `**` in the excludes, otherwise they don't work.
<https://github.com/rust-lang/cargo/issues/3578> is tracking the issue.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,11 @@ keywords = ["rtl", "unicode", "text", "layout", "bidi"]
 
 # No data is shipped; benches, examples and tests also depend on data.
 exclude = [
-    "benches/",
-    "data/",
-    "examples/",
-    "tests/",
-    "tools/",
+    "benches/**",
+    "data/**",
+    "examples/**",
+    "tests/**",
+    "tools/**",
 ]
 
 [lib]
