Remove matches dependency
Shouldn't change the MSRV guarantee (tested on Rust 1.36.0).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,13 +34,14 @@ name = "unicode_bidi"
 [dependencies]
 flame = { version = "0.2", optional = true }
 flamer = { version = "0.4", optional = true }
-matches = "0.1"
 serde = { version = ">=0.8, <2.0", default-features = false, optional = true, features = ["derive"] }
 
 [dev-dependencies]
 serde_test = ">=0.8, <2.0"
 
 [features]
+# Note: We don't actually use the `std` feature for anything other than making
+# doctests work. But it may come in handy in the future.
 default = ["std"]
 std = []
 unstable = []  # travis-cargo needs it
