Test no_std capability

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,3 +30,7 @@ jobs:
         with:
           command: test
           args: --features "serde"
+      - uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: --no-default-features
