--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,8 @@ serde_test = ">=0.8, <2.0"
 [features]
 # Note: We don't actually use the `std` feature for anything other than making
 # doctests work. But it may come in handy in the future.
-default = ["std"]
+default = ["std", "hardcoded-data"]
+hardcoded-data = [] # Include hardcoded Bidi data
 std = []
 unstable = []  # travis-cargo needs it
 bench_it = []
