--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,3 +34,7 @@ jobs:
         with:
           command: test
           args: --no-default-features
+      - uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: --no-default-features --features=hardcoded-data
