--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,9 +16,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
-          profile: minimal
           toolchain: ${{ matrix.rust }}
           override: true
+          profile: minimal
       - uses: actions-rs/cargo@v1
         with:
           command: build
@@ -38,6 +38,18 @@ jobs:
         with:
           command: test
           args: --no-default-features --features=hardcoded-data
+  Fmt:
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
+          components: rustfmt
+      - uses: actions-rs/cargo@v1
+        with:
+          command: fmt
+          args: --check
 
   build_result:
     name: homu build finished
