--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,6 +57,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - "Test"
+      - "Fmt"
     steps:
       - name: Mark the job as successful
         run: exit 0
