--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
           override: true
           profile: minimal
       - name: Potentially pin serde dep for MSRV check
-        if: ${{ matrix.rust == 1.36.0 }}
+        if: matrix.rust == '1.36.0'
         run: cargo update -p serde --precise 1.0.156
       - uses: actions-rs/cargo@v1
         with:
