[smallvec] Optionally use SmallVec for some internal scratch vectors
We have some temporary vectors used during processing that will
usually only hold a few entries. By using SmallVec here, we can
avoid extra heap allocations in common cases.

(In Gecko's usage, I'm seeing around 4% improvement on the bidi-
resolution subtest of perf_reftest_singletons with this change.)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ name = "unicode_bidi"
 flame = { version = "0.2", optional = true }
 flamer = { version = "0.4", optional = true }
 serde = { version = ">=0.8, <2.0", default-features = false, optional = true, features = ["derive"] }
+smallvec = { version = ">=1.13", optional = true, features = ["union"] }
 
 [dev-dependencies]
 serde_test = ">=0.8, <2.0"
